--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ p {
 
 img {
     width: 100%;
-    min-width: 300px;
+    min-width: 200px;
+    max-width: 500px;
     border-radius: 5%;
 
     display: block;
@@ -65,6 +66,7 @@ ul {
 
 li {
     text-align: center;
+    line-height: 5rem;
 }
 
 html {
